src/objects/geopointe__GP_Folder__c.object
<CustomObject>
    <description>Folder for Geopointe objects such as Data Sets.</description>
    <fields>
        <fullName>geopointe__Inherit_Sharing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inherit Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Parent_Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Folder</label>
        <referenceTo>geopointe__GP_Folder__c</referenceTo>
        <relationshipLabel>Child Folders</relationshipLabel>
        <relationshipName>Child_Folders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Personal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this becomes a personal Folder available only to the owner.</inlineHelpText>
        <label>Personal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Scorecard_Integration__c</fullName>
        <label>Scorecard Integration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Type__c</fullName>
        <description>The type of objects contained in this folder</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Data Set</fullName>
                    <default>true</default>
                    <label>Data Set</label>
                </value>
                <value>
                    <fullName>Shape</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Geopointe Folder</label>
    <listViews>
        <fullName>geopointe__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Geopointe Folder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Folders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>